tests/baselines/reference/optionalBindingParameters1.errors.txt
tests/cases/conformance/es6/destructuring/optionalBindingParameters1.ts(1,14): error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
tests/cases/conformance/es6/destructuring/optionalBindingParameters1.ts(7,6): error TS2322: Type 'boolean' is not assignable to type 'string'.
tests/cases/conformance/es6/destructuring/optionalBindingParameters1.ts(7,16): error TS2322: Type 'string' is not assignable to type 'boolean'.


==== tests/cases/conformance/es6/destructuring/optionalBindingParameters1.ts (3 errors) ====
    function foo([x,y,z]?: [string, number, boolean]) {
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
    
    }
    
    foo(["", 0, false]);
    
    foo([false, 0, ""]);
         ~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
                   ~~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.